Package_Tools/glib/Package_Tools/include-C/glib-2.0/gobject/in_arbeit/gclosure.pp


function g_cclosure_new(callback_func:TGCallback; user_data:Tgpointer; destroy_data:TGClosureNotify):PGClosure;cdecl;external;
function g_cclosure_new_swap(callback_func:TGCallback; user_data:Tgpointer; destroy_data:TGClosureNotify):PGClosure;cdecl;external;
function g_signal_type_cclosure_new(itype:TGType; struct_offset:Tguint):PGClosure;cdecl;external;
{ --- prototypes ---  }
function g_closure_ref(closure:PGClosure):PGClosure;cdecl;external;
procedure g_closure_sink(closure:PGClosure);cdecl;external;
procedure g_closure_unref(closure:PGClosure);cdecl;external;
{ intimidating  }
function g_closure_new_simple(sizeof_closure:Tguint; data:Tgpointer):PGClosure;cdecl;external;
procedure g_closure_add_finalize_notifier(closure:PGClosure; notify_data:Tgpointer; notify_func:TGClosureNotify);cdecl;external;
procedure g_closure_remove_finalize_notifier(closure:PGClosure; notify_data:Tgpointer; notify_func:TGClosureNotify);cdecl;external;
procedure g_closure_add_invalidate_notifier(closure:PGClosure; notify_data:Tgpointer; notify_func:TGClosureNotify);cdecl;external;
procedure g_closure_remove_invalidate_notifier(closure:PGClosure; notify_data:Tgpointer; notify_func:TGClosureNotify);cdecl;external;
procedure g_closure_add_marshal_guards(closure:PGClosure; pre_marshal_data:Tgpointer; pre_marshal_notify:TGClosureNotify; post_marshal_data:Tgpointer; post_marshal_notify:TGClosureNotify);cdecl;external;
procedure g_closure_set_marshal(closure:PGClosure; marshal:TGClosureMarshal);cdecl;external;
procedure g_closure_set_meta_marshal(closure:PGClosure; marshal_data:Tgpointer; meta_marshal:TGClosureMarshal);cdecl;external;
procedure g_closure_invalidate(closure:PGClosure);cdecl;external;
{out }(* Const before type ignored *)
procedure g_closure_invoke(closure:PGClosure; return_value:PGValue; n_param_values:Tguint; param_values:PGValue; invocation_hint:Tgpointer);cdecl;external;
{ FIXME:
   OK:  data_object::destroy		-> closure_invalidate();
   MIS:	closure_invalidate()		-> disconnect(closure);
   MIS:	disconnect(closure)		-> (unlink) closure_unref();
   OK:	closure_finalize()		-> g_free (data_string);

   random remarks:
   - need marshaller repo with decent aliasing to base types
   - provide marshaller collection, virtually covering anything out there
 }
(* Const before type ignored *)
procedure g_cclosure_marshal_generic(closure:PGClosure; return_gvalue:PGValue; n_param_values:Tguint; param_values:PGValue; invocation_hint:Tgpointer; 
            marshal_data:Tgpointer);cdecl;external;
procedure g_cclosure_marshal_generic_va(closure:PGClosure; return_value:PGValue; instance:Tgpointer; args_list:Tva_list; marshal_data:Tgpointer; 
            n_params:longint; param_types:PGType);cdecl;external;
{$endif}
{ __G_CLOSURE_H__  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_CLOSURE_NEEDS_MARSHAL(closure : longint) : longint;
begin
  G_CLOSURE_NEEDS_MARSHAL:=((PGClosure(closure))^.marshal)=NULL;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_CLOSURE_N_NOTIFIERS(cl : longint) : longint;
begin
  G_CLOSURE_N_NOTIFIERS:=(((cl^.n_guards) shl 1)+(cl^.n_fnotifiers))+(cl^.n_inotifiers);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_CCLOSURE_SWAP_DATA(cclosure : longint) : longint;
begin
  G_CCLOSURE_SWAP_DATA:=(PGClosure(cclosure))^.derivative_flag;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function G_CALLBACK(f : longint) : TGCallback;
begin
  G_CALLBACK:=TGCallback(f);
end;

function ref_count(var a : TGClosure) : Tguint;
begin
  ref_count:=(a.flag0 and bm_TGClosure_ref_count) shr bp_TGClosure_ref_count;
end;

procedure set_ref_count(var a : TGClosure; __ref_count : Tguint);
begin
  a.flag0:=a.flag0 or ((__ref_count shl bp_TGClosure_ref_count) and bm_TGClosure_ref_count);
end;

function meta_marshal_nouse(var a : TGClosure) : Tguint;
begin
  meta_marshal_nouse:=(a.flag0 and bm_TGClosure_meta_marshal_nouse) shr bp_TGClosure_meta_marshal_nouse;
end;

procedure set_meta_marshal_nouse(var a : TGClosure; __meta_marshal_nouse : Tguint);
begin
  a.flag0:=a.flag0 or ((__meta_marshal_nouse shl bp_TGClosure_meta_marshal_nouse) and bm_TGClosure_meta_marshal_nouse);
end;

function n_guards(var a : TGClosure) : Tguint;
begin
  n_guards:=(a.flag0 and bm_TGClosure_n_guards) shr bp_TGClosure_n_guards;
end;

procedure set_n_guards(var a : TGClosure; __n_guards : Tguint);
begin
  a.flag0:=a.flag0 or ((__n_guards shl bp_TGClosure_n_guards) and bm_TGClosure_n_guards);
end;

function n_fnotifiers(var a : TGClosure) : Tguint;
begin
  n_fnotifiers:=(a.flag0 and bm_TGClosure_n_fnotifiers) shr bp_TGClosure_n_fnotifiers;
end;

procedure set_n_fnotifiers(var a : TGClosure; __n_fnotifiers : Tguint);
begin
  a.flag0:=a.flag0 or ((__n_fnotifiers shl bp_TGClosure_n_fnotifiers) and bm_TGClosure_n_fnotifiers);
end;

function n_inotifiers(var a : TGClosure) : Tguint;
begin
  n_inotifiers:=(a.flag0 and bm_TGClosure_n_inotifiers) shr bp_TGClosure_n_inotifiers;
end;

procedure set_n_inotifiers(var a : TGClosure; __n_inotifiers : Tguint);
begin
  a.flag0:=a.flag0 or ((__n_inotifiers shl bp_TGClosure_n_inotifiers) and bm_TGClosure_n_inotifiers);
end;

function in_inotify(var a : TGClosure) : Tguint;
begin
  in_inotify:=(a.flag0 and bm_TGClosure_in_inotify) shr bp_TGClosure_in_inotify;
end;

procedure set_in_inotify(var a : TGClosure; __in_inotify : Tguint);
begin
  a.flag0:=a.flag0 or ((__in_inotify shl bp_TGClosure_in_inotify) and bm_TGClosure_in_inotify);
end;

function floating(var a : TGClosure) : Tguint;
begin
  floating:=(a.flag0 and bm_TGClosure_floating) shr bp_TGClosure_floating;
end;

procedure set_floating(var a : TGClosure; __floating : Tguint);
begin
  a.flag0:=a.flag0 or ((__floating shl bp_TGClosure_floating) and bm_TGClosure_floating);
end;

function derivative_flag(var a : TGClosure) : Tguint;
begin
  derivative_flag:=(a.flag0 and bm_TGClosure_derivative_flag) shr bp_TGClosure_derivative_flag;
end;

procedure set_derivative_flag(var a : TGClosure; __derivative_flag : Tguint);
begin
  a.flag0:=a.flag0 or ((__derivative_flag shl bp_TGClosure_derivative_flag) and bm_TGClosure_derivative_flag);
end;

function in_marshal(var a : TGClosure) : Tguint;
begin
  in_marshal:=(a.flag0 and bm_TGClosure_in_marshal) shr bp_TGClosure_in_marshal;
end;

procedure set_in_marshal(var a : TGClosure; __in_marshal : Tguint);
begin
  a.flag0:=a.flag0 or ((__in_marshal shl bp_TGClosure_in_marshal) and bm_TGClosure_in_marshal);
end;

function is_invalid(var a : TGClosure) : Tguint;
begin
  is_invalid:=(a.flag0 and bm_TGClosure_is_invalid) shr bp_TGClosure_is_invalid;
end;

procedure set_is_invalid(var a : TGClosure; __is_invalid : Tguint);
begin
  a.flag0:=a.flag0 or ((__is_invalid shl bp_TGClosure_is_invalid) and bm_TGClosure_is_invalid);
end;


end.
